<resources>
    <string name="app_name">Fit</string>
    <string name="title_activity_form_login">FormLogin</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_tela_logo">TelaLogo</string>

    <!-- strings.xml -->
    <string name="fitstrides">
        FitStrides
    </string>

    <!-- strings.xml -->
    <string name="o_parceiro_">
        O parceiro para uma jornada saudavel
    </string>

    <string name="aquastride">
    AquaStride
    </string>

    <string name="sing_up">
    Cadastro
    </string>

    <string name="name">
    Nome Completo
    </string>

    <string name="email">
    Email
    </string>

    <string name="phone">
    Telefone
    </string>

    <string name="password">
    Senha
    </string>

    <string name="gender">
    Gênero
    </string>

    <string name="Male">
    Masculino
    </string>

    <string name="Female">
    Feminino
    </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_teste2">teste2</string>
    <string name="title_activity_teste3">teste3</string>


    <string name="male">Masculino</string>
    <string name="female">Feminino</string>
    <string name="continue_registration">Continuar Cadastro</string>
    <string name="sign_up">Cadastro</string>
    <string name="voltar">Voltar</string>
    <string name="selecionar_foto">Selecionar Foto</string>
    <string name="finalizar_cadastro">Finalizar Cadastro</string>
    <string name="icone_perfil_padrao_desc">Ícone de perfil padrão</string>
    <string name="adicione_imagem_perfil">Adicione uma imagem de perfil tocando abaixo</string>

    <string name="dContadorPassos">Contador de Passos</string>

    <string name="dIconeCont">Icone Homem Correndo</string>

    <string name="caloria">Kcal</string>

    <string name="dcal">Icone caloria</string>

    <string name="sinalDeMenos">-</string>

    <string name="dSinalDeMenos">Sinal de Menos</string>

    <string name="botaoReset">Resetar</string>

    <string name="sBotaoReset">Botão para Resetar</string>

    <string name="beba_agua">Beba Água!</string>
    <string name="titulo_tela_intro_2">Conte seus passos!</string>


    <!-- Strings para os títulos de BottomNavigationView -->
    <string name="home">Home</string>
    <string name="passos">Passos</string>
    <string name="agua">Água</string>

    <!-- Strings para os títulos das Tabs -->
    <string name="historico">Histórico</string>
    <string name="hoje">Hoje</string>
    <string name="configuracoes">Configurações</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="litros_consumidos">litros consumidos</string>
    <string name="incrementar">incrementar agua</string>
    <string name="title_activity_tela_principal">Tela_Principal</string>

    <string name="title_passos">Passos</string>
    <string name="title_agua">Água</string>
    <string name="meta_de_hidrata_o">Meta de hidratação</string>
    <string name="registro_de_hoje">Registro de Hoje</string>
    <string name="_12_00_pm">12:00 PM</string>
    <string name="nome_do_item">Nome do Item</string>
    <string name="_250ml">250ml</string>
    <string name="copo_200ml">Copo 200ml</string>
    <string name="copo_300ml">Copo 300ml</string>
    <string name="garrafa_300ml">Garrafa 300ml</string>
    <string name="personalizado">Personalizado</string>
    <string name="seu_registro_de_hoje">Seu Registro de Hoje</string>
    <string name="relat_rio">Relatório</string>
    <string name="lembrete">Lembrete</string>
    <string name="progress_text">%d ml</string>
    <string name="km">Km</string>
    <string name="dMostraDistancia">Mostra a distancia Percorrida</string>
    <string name="Km">KM\n</string>

</resources>