<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tela_7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal">

    <ImageView
        android:id="@+id/vector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="1dp"
        android:src="@drawable/vector" />


    <TextView
        android:id="@+id/aquastride"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/fitstrides"
        android:textAppearance="@style/aquastride"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sing_up"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="@+id/aquastride"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/sing_up"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/edit_nocompleto"
        android:hint="@string/name"
        android:textColorHint="@color/black"
        android:layout_width="336.94dp"
        android:layout_height="54dp"
        android:background="@drawable/input"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"
        android:paddingStart="16dp"
    />


    <EditText
        android:id="@+id/edit_email"
        android:hint="@string/email"
        android:textColorHint="@color/black"
        android:layout_width="336.94dp"
        android:layout_height="54dp"
        android:layout_gravity="center"
        android:background="@drawable/input"
        android:layout_marginBottom="20dp"
        android:paddingStart="16dp"

        />




    <EditText
        android:id="@+id/edit_senha"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        android:layout_width="336.94dp"
        android:layout_height="54dp"
        android:layout_gravity="center"
        android:background="@drawable/input"
        android:layout_marginBottom="20dp"
        android:paddingStart="16dp"

        />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Gênero:" />

        <RadioGroup
            android:id="@+id/gender_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rg_radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="Masculino" />

            <RadioButton
                android:id="@+id/rg_radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Feminino" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/bt_continuecadastro"
        android:layout_width="336dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="Continue cadastro"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:color="#1EACDE"
        android:radius="28dp"/>
        />

</LinearLayout>